minor user interface modifications: start/stop video, video position change, recording position change, pdf jumps top top

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,7 +15,7 @@ a {
 #video_overlay {
   position: absolute;
   top: 150px;
-  left: 300px;
+  right: 20px;
   height: 230px;
   width: 400px;
   padding: 5px;
@@ -38,7 +38,7 @@ a {
 
 #content_area{
     margin: 0 auto;
-    width: 100%;
+    width: 900px;
     display: inline-block;
 }
 
@@ -48,10 +48,11 @@ a {
 
 #record_bar {
 	width: 50px;
+  left: 100px;
 	height: 1000px;
     background-color: #EEEEEE;
 	display: inline-block;
-  float: left;
+  float: right;
 }
 
 #record_bar img{
